add: FixedLengthArrayOutputStream