@@ -65,9 +65,9 @@
             <version>3.0.2</version>
         </dependency>
     </dependencies>
-    
+
     <properties>
-        <oap.project.version>9.17.3</oap.project.version>
+        <oap.project.version>9.17.4</oap.project.version>
 
 
         <oap.deps.testng.version>7.4.0</oap.deps.testng.version>
@@ -105,7 +105,7 @@
         <oap.deps.quartz.version>2.3.2</oap.deps.quartz.version>
         <oap.deps.fop.version>2.1.2</oap.deps.fop.version>
         <oap.deps.lz4.version>1.8.0</oap.deps.lz4.version>
-        <oap.deps.fst.version>2.57</oap.deps.fst.version>
+        <oap.deps.fst.version>3.0.3</oap.deps.fst.version>
         <oap.deps.guava-retrying.version>2.0.0</oap.deps.guava-retrying.version>
         <oap.deps.javax.activation.version>1.1.1</oap.deps.javax.activation.version>
         <oap.deps.disruptor.version>1.2.19</oap.deps.disruptor.version>
@@ -125,4 +125,23 @@
 
         <oap.deps.undertow.version>2.2.9.Final</oap.deps.undertow.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.math=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens=java.base/java.net=ALL-UNNAMED
+                        --add-opens=java.base/java.text=ALL-UNNAMED
+                        --add-opens=java.sql/java.sql=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
